Filenames updated JS & CSS

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
-<link rel="stylesheet" type="text/css" href="public/css/_.css">
+<link rel="stylesheet" type="text/css" href="public/css/weatheredGifs.css">
 
-<title>_</title>
+<title>Weathered Gifs</title>
 </head>
 
 <body onload="pageLoad_init();">
 
 
-<script type="text/javascript" src="public/js/_.js"></script>
+<script type="text/javascript" src="public/js/weatheredGifs.js"></script>
 </body>
 
 </html>
