Weather list updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
 <script type="text/javascript" src="public/js/weatheredGifs.js"></script>
+<script type="text/javascript" src="public/js/weatherTypeCreate.js"></script>
 </body>
 
 </html>
