Gif basics added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Weathered Gifs</title>
 </head>
 
-<body onload="pageLoad_init();">
+<body onload="pageLoad_init()">
 
 
 <script type="text/javascript" src="public/js/weatheredGifs.js"></script>
