Giphy api added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body onload="pageLoad_init()">
 
+<div id="display-wrapper">
+	<div class="display-content">
+		<div class="display-gif"></div>
+	</div>
+</div>
 
 <script type="text/javascript" src="public/js/weatheredGifs.js"></script>
 <script type="text/javascript" src="public/js/weatherTypeCreate.js"></script>
