--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <div id="display-wrapper">
 	<div class="display-content">
 		<div class="display-gif"></div>
+		<p class="display-text">test</p>
+		<div class="screen-fx tween-fix"></div>
 	</div>
 </div>
 
