Weather terms fix
Simple descriptions added to case statments

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
 <link rel="stylesheet" type="text/css" href="public/css/weatheredGifs.css">
 
@@ -14,7 +16,7 @@
 <div id="display-wrapper">
 	<div class="display-content">
 		<div class="display-gif"></div>
-		<p class="display-text">test</p>
+		<p class="display-text text-center">test</p>
 		<div class="screen-fx tween-fix"></div>
 	</div>
 </div>
