--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="display-wrapper">
 	<div class="display-content">
 		<div class="display-gif"></div>
-		<p class="display-text text-center">test</p>
+		<p class="display-text text-center display-text-tween tween-fix display-text-default">test</p>
 		<div class="screen-fx tween-fix"></div>
 	</div>
 </div>
