Text layout fixes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 <div id="display-wrapper">
 	<div class="display-content">
 		<div class="display-gif"></div>
-		<p class="display-text text-center display-text-tween tween-fix display-text-default">test</p>
-		<div class="screen-fx tween-fix"></div>
+		
+		<div class="display-text-wrapper tween-fix display-text-wrapper-default">
+			<p class="display-text text-center">test</p>
+		</div>
+		
+		<!-- <div class="screen-fx tween-fix"></div> -->
 	</div>
 </div>
 
