Final text placement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="display-gif"></div>
 		
 		<div class="display-text-wrapper tween-fix display-text-wrapper-default">
-			<p class="display-text text-center">test</p>
+			<p class="display-text text-left">test</p>
 		</div>
 		
 		<!-- <div class="screen-fx tween-fix"></div> -->
