Temperature added, layout tweaks
New font tested, text is now in a container in the bottom section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
 <link rel="stylesheet" type="text/css" href="public/css/weatheredGifs.css">
 
@@ -18,7 +19,10 @@
 		<div class="display-gif"></div>
 		
 		<div class="display-text-wrapper tween-fix display-text-wrapper-default">
-			<p class="display-text text-left">test</p>
+			<div class="display-text">
+				<p class="display-type"></p>
+				<p class="display-temp display-temp-default"></p>
+			</div>
 		</div>
 		
 		<!-- <div class="screen-fx tween-fix"></div> -->
