New text from google fonts added in html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
+
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
 <link rel="stylesheet" type="text/css" href="public/css/weatheredGifs.css">
 
