Continued amends, issues with temperature display

--- a/index.html
+++ b/index.html
@@ -19,16 +19,22 @@
 
 <div id="display-wrapper">
 	<div class="display-content">
+		
 		<div class="display-gif"></div>
 		
-		<div class="display-text-wrapper tween-fix display-text-wrapper-default">
-			<div class="display-text">
+		<div class="display-text-wrapper tween-fix"> <!-- display-text-wrapper-default -->
+			<div class="display-type-content">
 				<p class="display-type"></p>
+			</div>
+		</div>
+
+		<div class="display-temp-wrapper">
+			<div class="display-temp-content">
 				<p class="display-temp display-temp-default"></p>
 			</div>
 		</div>
 		
-		<!-- <div class="screen-fx tween-fix"></div> -->
+		<div class="screen-fx tween-fix"></div>
 	</div>
 </div>
 
