Basic animation set up

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 		
 		<div class="display-gif"></div>
 		
-		<div class="display-text-wrapper tween-fix"> <!-- display-text-wrapper-default -->
-			<div class="display-type-content">
+		<div class="display-type-wrapper"> <!-- display-text-wrapper-default -->
+			<div class="display-type-content tween-fix display-type-default">
 				<p class="display-type"></p>
 			</div>
 		</div>
 
 		<div class="display-temp-wrapper">
-			<div class="display-temp-content">
-				<p class="display-temp display-temp-default"></p>
+			<div class="display-temp-content tween-fix display-temp-default">
+				<p class="display-temp"></p>
 			</div>
 		</div>
 		
